--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/iamsatyam035/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
+									<li><a href="https://learn.microsoft.com/iamsatyam035" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
 									<li><a href="https://github.com/iamsatyam13" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
+									<li><a href="https://hackerrank.com/iamsatyam035" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
 									<li><a href="https://www.instagram.com/iamsatyam_35/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
