--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Satyam's Portfolio </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,10 +35,10 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/iamsatyam035/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
+									<li><a href="https://learn.microsoft.com/en-in/iamsatyam035/" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
 									<li><a href="https://github.com/iamsatyam13" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
-									<li><a href="https://www.instagram.com/iamsatyam_35/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://hackerrank.com/iamsatyam035" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
+									<li><a href="https://www.instagram.com/iamsatyam_35/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li></span></a></li>
 								
 						</ul>
 					</nav>
@@ -164,7 +164,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/iamsatyam035/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://learn.microsoft.com/iamsatyam035" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
+									<li><a href="https://learn.microsoft.com/en-in/iamsatyam035/" class="icon brands fa-microsoft"><span class="label">Microsoft</span></a></li>
 									<li><a href="https://github.com/iamsatyam13" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://hackerrank.com/iamsatyam035" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
 									<li><a href="https://www.instagram.com/iamsatyam_35/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
