--- a/index.html
+++ b/index.html
@@ -60,20 +60,21 @@
 								</ul>
 							</article>
 
-						<!-- Posts 
+						 Posts 
 							<section class="posts">
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql">SQL Data<br />
+										Exploration</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="image fit"><img src="images/Vaccination.jpg" alt="" /></a>
+									<p>Data Exploration with SQL on Covid-19 Dataset from ourworldindata.org</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
