--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 							</article>
 
 						 Posts 
-							<section class="posts">
+							<section class="Projects">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
+										<span class="date">April 27, 2023</span>
 										<h2><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql">SQL Data<br />
 										Exploration</a></h2>
 									</header>
 									<a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="image fit"><img src="images/Vaccination.jpg" alt="" /></a>
 									<p>Data Exploration with SQL on Covid-19 Dataset from ourworldindata.org</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="button">Full Story</a></li>
+										<li><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!--
