--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										Exploration</a></h2>
 									</header>
 									<a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="image fit"><img src="images/Vaccination.jpg" alt="" /></a>
-									<p>Data Exploration with SQL on Covid-19 Dataset from ourworldindata.org</p>
+									<p>In this project, SQL is used to analyze COVID-19 data from OurWorldInData.org. The dataset is explored to identify trends, patterns, and insights into the impact of the pandemic. The project aims to provide a comprehensive understanding of the data and its significance for public health and policy-making.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="button">View Project</a></li>
 									</ul>
