--- a/index.html
+++ b/index.html
@@ -74,19 +74,20 @@
 										<li><a href="https://github.com/iamsatyam13/PortfolioProject1/blob/main/Covid1.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">May 4, 2022</span>
+										<h2><a href="https://github.com/iamsatyam13/MissingPerson_data.gov.in/blob/main/Missing_and_Traced(2021_STATE).ipynb">Missing Persons<br />
+										in India</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/iamsatyam13/MissingPerson_data.gov.in/blob/main/Missing_and_Traced(2021_STATE).ipynb" class="image fit"><img src="images/Untraced Missing Persons from before 2021 in Indian states.png" alt="" /></a>
+									<p>Using Matplotlib and Seaborn libraries, I created visualizations for a 2021 missing person dataset from data.gov.in, which shows state-wise and union territories comparison of male, female, and transgender missing persons. These visualizations help to identify patterns and trends in the data, allowing for more effective decision-making and resource allocation in addressing the issue of missing persons.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/iamsatyam13/MissingPerson_data.gov.in/blob/main/Missing_and_Traced(2021_STATE).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
