--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						<section class="split contact">
 							<section>
 								<h3>My Formal Resume</h3>
-								<p><a href="docs/Resume.pdf">Click here to Open Resume</a></p>
+								<p><a href="docs/SatyamKumar_Resume.pdf">Click here to Open Resume</a></p>
 							
 							</section>
 							<section class="alt">
