--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@
 										<li><a href="https://github.com/iamsatyam13/MissingPerson_data.gov.in/blob/main/Missing_and_Traced(2021_STATE).ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9">HR Analytics<br />
+										Dashboard</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9" class="image fit"><img src="images/Human_resources.jpg" alt="" /></a>
+									<p>HR analytics dashboard  using Power BI, featuring visually appealing KPI cards and a variety of chart types including clustered column, donut chart, column chart, heat map, and area chart to showcase data insights.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9" class="button">View Dashboard</a></li>
 									</ul>
 								</article>
+								
+								<!--
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
