--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										Dashboard</a></h2>
 									</header>
 									<a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9" class="image fit"><img src="images/Human_resources.jpg" alt="" /></a>
-									<p>HR analytics dashboard  using Power BI, featuring visually appealing KPI cards and a variety of chart types including clustered column, donut chart, column chart, heat map, and area chart to showcase data insights.</p>
+									<p>HR analytics dashboard  using Power BI, featuring visually appealing KPI cards and a variety of chart types including clustered column chart, donut chart, column chart, heat map, and area chart to showcase data insights.</p>
 									<ul class="actions special">
 										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9" class="button">View Dashboard</a></li>
 									</ul>
