--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="https://github.com/iamsatyam13/WebServerLogAnalysis">View Code</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/iamsatyam035/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
