--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="https://github.com/iamsatyam13/WebServerLogAnalysis">View Code</a></li>
+							
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/iamsatyam035/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -57,7 +57,9 @@
 								</header>
 								<a href="https://weblogsatyam.netlify.app/" class="image  main"><img src="images/servers.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://weblogsatyam.netlify.app/" class="button large">View Project</a></li>
+									<li><a href="https://weblogsatyam.netlify.app/" class="button large">View Project</a><br><br><br><br>
+									<a href="https://github.com/iamsatyam13/WebServerLogAnalysis" class="button large">View Code</a></li>
+	
 								</ul>
 							</article>
 
