--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 								</header>
 								<a href="https://weblogsatyam.netlify.app/" class="image  main"><img src="images/servers.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://weblogsatyam.netlify.app/" class="button large">View Project</a><br><br><br><br>
-									<a href="https://github.com/iamsatyam13/WebServerLogAnalysis" class="button large">View Code</a></li>
+									<li><a href="https://weblogsatyam.netlify.app/" class="button large">View Project
+										<a href="https://github.com/iamsatyam13/WebServerLogAnalysis" class="button large">View Code
+										</a>
+									</a></li>
 	
 								</ul>
 							</article>
