--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
 								</header>
 								<a href="https://weblogsatyam.netlify.app/" class="image  main"><img src="images/servers.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://weblogsatyam.netlify.app/" class="button large">View Project
-										<a href="https://github.com/iamsatyam13/WebServerLogAnalysis" class="button large">View Code
-										</a>
-									</a></li>
+									<li><a href="https://github.com/iamsatyam13/WebServerLogAnalysis/" class="button large">View Project</a></li>
 	
 								</ul>
 							</article>
