--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 								
 								<article>
 									<header>
+										<span class="date">May 9, 2023</span> 
 										<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiZjY4MGE3NTEtMjIwOS00ZTQxLWFjM2ItYzViNDVhNWIyOGJkIiwidCI6Ijg5NTEwMzE2LTE2ZTAtNGY4OC1hNGFkLTE3MjJlZjZlMDlmZiIsImMiOjZ9">HR Analytics<br />
 										Dashboard</a></h2>
 									</header>
